--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulär</title>
+    <title>UniversityDB</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   <div class="main-content">
     <th colspan="3"><h1>Course database</h1></th>
-    <h4>Search For Student In Registered Course</h4>
+    <h4>Search Students</h4>
     <form action="/check" method="post">
-      <input name="student_id" type="text" placeholder="Enter name 'Bert Karlsson'"/>
+      <input name="student_id" type="text" placeholder="Enter student_id '001122-XXXX'"/>
       <button type="submit">Check</button>
     </form>
     <table>
@@ -19,9 +19,10 @@
     {% if result %}
     <thead>
       <tr>
-        <th>Student</th>
+        <th>Student ID/ID nummer</th>
         <th>Name</th>
-        <th>Status</th>
+        <th>Program</th>
+        <th>Branch</th>
       </tr>
     </thead>
       <p>Student(s) found:</p>
@@ -30,6 +31,7 @@
           <td>{{row[0]}}</td>
           <td>{{row[1]}}</td>
           <td>{{row[2]}}</td>
+          <td>{{row[3]}}</td>
         </tr>
       {% endfor %}
     {% else %}
@@ -37,7 +39,36 @@
     {% endif %}
   </tbody>
 </table>
-
+<h4>Search Students(UNSAFE)</h4>
+<form action="/check_unsafe" method="post">
+  <input name="student_id" type="text" placeholder="Enter student_id '001122-XXXX'"/>
+  <button type="submit">Check</button>
+</form>
+<table>
+<tbody>
+{% if result %}
+<thead>
+  <tr>
+    <th>Student ID/ID nummer</th>
+    <th>Name</th>
+    <th>Program</th>
+    <th>Branch</th>
+  </tr>
+</thead>
+  <p>Student(s) found:</p>
+  {% for row in result %}
+    <tr>
+      <td>{{row[0]}}</td>
+      <td>{{row[1]}}</td>
+      <td>{{row[2]}}</td>
+      <td>{{row[3]}}</td>
+    </tr>
+  {% endfor %}
+{% else %}
+  <p class="error-message">{{ error }}</p>
+{% endif %}
+</tbody>
+</table>
     <h4>Register Student in a course</h4>
 
     <form action="/register" method="post">
